inferences are changed to reasoning.

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -181,15 +181,15 @@ the OWL 2 SPIN mapping is maintained at \url{https://github.com/boschthomas/OWL2
 
 Constraint validation does not appear to be part of the services provided by
 OWL.  This has lead to claims that OWL cannot be used for constraint
-validation.  However inference, which is the core service provided by OWL,
+validation.  However reasoning, which is the core service provided by OWL,
 and constraint validation are indeed very closely related.
 
-Inference is the process of determining what follows from what has been
-stated.  Inference ranges from simple (students are people, John is a
-student, therefore John is a person) to the very complex.  Inference can
+Reasoning is the process of determining what follows from what has been
+stated.  Reasoning ranges from simple (students are people, John is a
+student, therefore John is a person) to the very complex. Reasoning can
 also recognize impossibilities (students are people, John is a student, John
 is not a person, therefore there is a contradiction).  In the presence of
-complete information, nothing new can be inferred, so inference only checks
+complete information, nothing new can be inferred, so reasoning only checks
 for impossibilities, i.e., constraint violations.  
 
 \begin{itemize}
@@ -250,7 +250,7 @@ We answer the following \textbf{research questions}:
 	\item show that OWL 2 QL and further constraint languages together are complete
 \end{itemize}
 
-\section{RDF Validation Requirements and Inferencing}
+\section{RDF Validation Requirements and Reasoning}
 
 \tb{ToDO Thomas: RDF Validation Requirements and Inferencing}
 
