--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -161,28 +161,6 @@
   Url                      = {http://www.inderscience.com/info/inarticle.php?artid=57760}
 }
 
-
-@article{Perez2009,
- author = {P{\'e}rez, Jorge and Arenas, Marcelo and Gutierrez, Claudio},
- title = {Semantics and Complexity of SPARQL},
- journal = {ACM Trans. Database Syst.},
- issue_date = {August 2009},
- volume = {34},
- number = {3},
- month = sep,
- year = {2009},
- issn = {0362-5915},
- pages = {16:1--16:45},
- articleno = {16},
- numpages = {45},
- url = {http://doi.acm.org/10.1145/1567274.1567278},
- doi = {10.1145/1567274.1567278},
- acmid = {1567278},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {Complexity, RDF, SPARQL, query language, semantic Web},
-}
-
 @Article{BoschMathiak2014,
   Title                    = {Use Cases Related to an Ontology of the Data Documentation Initiative},
   Author                   = {Bosch, Thomas and Mathiak, Brigitte},
@@ -224,6 +202,15 @@
 
   Owner                    = {Thomas Bosch},
   Timestamp                = {2014.11.08}
+}
+
+@TechReport{BoschNolleAcarEckert2015,
+  Title                    = {RDF Validation Requirements},
+  Author                   = {Bosch, Thomas and Nolle, Andreas and Acar, Erman and Eckert, Kai},
+  Year                     = {2015},
+
+  Owner                    = {Thomas Bosch},
+  Timestamp                = {2014.12.17}
 }
 
 @Article{BoschNolleEckert2015,
@@ -486,6 +473,29 @@
 
   Bibsource                = {DBLP, http://dblp.uni-trier.de},
   Ee                       = {http://ceur-ws.org/Vol-426/swap2008_submission_47.pdf}
+}
+
+@Article{Perez2009,
+  Title                    = {Semantics and Complexity of SPARQL},
+  Author                   = {P{\'e}rez, Jorge and Arenas, Marcelo and Gutierrez, Claudio},
+  Journal                  = {ACM Trans. Database Syst.},
+  Year                     = {2009},
+
+  Month                    = sep,
+  Number                   = {3},
+  Pages                    = {16:1--16:45},
+  Volume                   = {34},
+
+  Acmid                    = {1567278},
+  Address                  = {New York, NY, USA},
+  Articleno                = {16},
+  Doi                      = {10.1145/1567274.1567278},
+  ISSN                     = {0362-5915},
+  Issue_date               = {August 2009},
+  Keywords                 = {Complexity, RDF, SPARQL, query language, semantic Web},
+  Numpages                 = {45},
+  Publisher                = {ACM},
+  Url                      = {http://doi.acm.org/10.1145/1567274.1567278}
 }
 
 @InProceedings{Riechert2007,
